Stop layout jumping as photo loads

--- a/resource/css/photo.css
+++ b/resource/css/photo.css
@@ -8,6 +8,7 @@
 .photo-image {
     max-width: 100%;
     max-height: 80vh;
+    height: auto;
     object-fit: contain;
     display: block;
     margin: 0 auto;
